--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,41 +16,65 @@ const { title } = Astro.props as Props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<header>
+			<nav id="navbar" class="rojo horizontal">
+				<div id="logo">
+					<a href="/">
+						<img
+							width="40px"
+							src=" https://i.blogs.es/808765/dpoty-puppy-2nd--c--tracy-kirby-the-kennel-club-2/450_1000.jpg"
+						/>
+					</a>
+				</div>
+				<div id="burger">
+					<button class="relative group">
+						<div
+							class="relative flex items-center justify-center rounded-full w-[50px] h-[50px] transform transition-all bg-slate-700 ring-0 ring-gray-300 hover:ring-8 group-focus:ring-4 ring-opacity-30 duration-200 shadow-md"
+						>
+							<div
+								class="flex flex-col justify-between w-[20px] h-[20px] transform transition-all duration-300 group-focus:-rotate-[45deg] origin-center"
+							>
+								<div
+									class="bg-white h-[2px] w-1/2 rounded transform transition-all duration-300 group-focus:-rotate-90 group-focus:h-[1px] origin-right delay-75 group-focus:-translate-y-[1px]"
+								>
+								</div>
+								<div class="bg-white h-[1px] rounded"></div>
+								<div
+									class="bg-white h-[2px] w-1/2 rounded self-end transform transition-all duration-300 group-focus:-rotate-90 group-focus:h-[1px] origin-left delay-75 group-focus:translate-y-[1px]"
+								>
+								</div>
+							</div>
+						</div>
+					</button>
+				</div>
+
+				<div id="menu">
+					<div id="mainListDiv" class="main_list">
+						<ul id="navlinks">
+							<li><a href="/aboutus">About Us</a></li>
+							<li><a href="#">Contact</a></li>
+							<li><a href="#">Merch</a></li>
+							<li><a href="#">Other Pages</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<slot />
+		</header>
 	</body>
+	<style>
+		#menu {
+			display: none;
+		}
+		#navbar {
+			display: flex;
+			justify-content: space-between;
+			margin: 20px;
+		}
+		body {
+			background-image: url("/fondo.jpg");
+			background-position: inherit;
+		}
+		
+	</style>
 </html>
-<style>
-	:root {
-		--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-		--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
-		--font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-
-		--color-text: hsl(12, 5%, 4%);
-		--color-bg: hsl(10, 21%, 95%);
-		--color-border: hsl(17, 24%, 90%);
-	}
-
-	html {
-		font-family: system-ui, sans-serif;
-		font-size: var(--font-size-base);
-		color: var(--color-text);
-		background-color: var(--color-bg);
-	}
-
-	body {
-		margin: 0;
-	}
-
-	:global(h1) {
-		font-size: var(--font-size-xl);
-	}
-
-	:global(h2) {
-		font-size: var(--font-size-lg);
-	}
-
-	:global(code) {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
