--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -88,4 +88,22 @@ const { title } = Astro.props as Props;
 		gap: 20px;
 		}
 	</style>
+	
+	
 </html>
+
+<script is:inline>
+
+const burger = document.getElementById("burger")
+
+function burgerclick() {
+const menu=documen.getElementById("menu")
+if (menu.style.display =="none") {
+    menu.style.display="flex";
+	}else{
+	menu.style.display="none";
+	}
+	}
+	burger.adde
+
+</script>
