--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,21 +6,21 @@ import Card from "../components/Card.astro";
 <Layout title="milagrosrobls">
 	<main>
 		<h1>PAGINA DE MILAGROS</h1>
-		<h1>Me llamo milagros y me gustan los gatos</h1>
-	</main>
-	<ul role="list" class="grid-card">
+		<h1>Me llamo milagros y esto es un proyecto para el taller de redes</h1>
 		<section>
-			<Card
-				href="https://www.instagram.com/milagrosrobls/"
-				title="Mi Instagram"
-				body="insta"
-			/>
+			<ul role="list" class="grid-card">
+				<Card
+					href="https://www.instagram.com/milagrosrobls/"
+					title="Mi Instagram"
+					body="insta"
+				/>
+			</ul>
 		</section>
-	</ul>
+	</main>
 </Layout>
 
 <style>
 	.background {
-		background-color: "/fondo.jpg";
+		background-color: "fondo.jpg";
 	}
 </style>
